--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -4,6 +4,65 @@ Author: Juli Scapucin
 Version: 2024
 */
 
+@import url("https://use.typekit.net/cbg5juo.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+	font-family: "PPSupplyMono";
+	src: url("./assets/fonts/PPSupplyMono-Regular.otf") format("opentype");
+	font-weight: normal;
+	font-style: normal;
+}
+
+:root {
+	--font-primary: "PPSupplyMono", monospace;
+	--font-secondary: "ff-real-text-pro", sans-serif;
+}
+
+@layer base {
+	:root {
+		--font-primary: "PPSupplyMono", monospace;
+		--font-secondary: "ff-real-text-pro", sans-serif;
+		--color-primary: 30 30 30;
+		--color-secondary: 40 209 194;
+		--color-secondary-rgb: 182, 209, 194;
+		--color-focus: 154, 152, 152;
+	}
+	:root[data-theme="dark"] {
+		--color-primary: 30 30 30;
+		--color-secondary: 40 209 194;
+		--color-secondary-rgb: 182, 209, 194;
+		--color-focus: 154, 152, 152;
+	}
+	:root[data-theme="light"] {
+		--color-primary: 249 246 238;
+		--color-secondary: 18 12 15;
+		--color-secondary-rgb: 18, 12, 15;
+		--color-focus: 154, 152, 152;
+	}
+
+	body {
+		@apply bg-primary p-8;
+	}
+
+	/* p {
+		@apply text-bodyLarge;
+		@apply mb-8;
+	} */
+}
+
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
+
+html,
+body {
+	font-weight: 200;
+	-webkit-font-smoothing: antialiased;
+	transition: background-color 0.2s linear;
+}
