--- a/app/public/wp-content/plugins/manonemusic/style.css
+++ b/app/public/wp-content/plugins/manonemusic/style.css
@@ -10,8 +10,11 @@ Version: 2024
 @tailwind components;
 @tailwind utilities;
 
+@import url("./src/assets/fonts/fonts.scss");
+
 @layer base {
 	:root {
+		/* --font-primary: "PPSupplyMono", monospace; */
 		--font-secondary: "ff-real-text-pro", sans-serif;
 		--color-primary: 30 30 30;
 		--color-secondary: 40 209 194;
