init-block-setup: add custom block style with tailwind \o/

--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -12,19 +12,27 @@ Version: 2024
 
 @import url("./assets/fonts.css");
 
+:root {
+	--color-primary: 30 30 30;
+	--color-secondary: 40 209 194;
+	--color-secondary-rgb: 182, 209, 194;
+	--color-focus: 154, 152, 152;
+}
+
 @layer base {
 	:root {
 		--font-primary: "PPSupplyMono", monospace;
 		--font-secondary: "ff-real-text-pro", sans-serif;
 		--color-primary: 30 30 30;
+		--color-primary-rgb: 30, 30, 30;
 		--color-secondary: 40 209 194;
-		--color-secondary-rgb: 182, 209, 194;
+		--color-secondary-rgb: 40, 209, 194;
 		--color-focus: 154, 152, 152;
 	}
 	:root[data-theme="dark"] {
 		--color-primary: 30 30 30;
 		--color-secondary: 40 209 194;
-		--color-secondary-rgb: 182, 209, 194;
+		--color-secondary-rgb: 40, 209, 194;
 		--color-focus: 154, 152, 152;
 	}
 	:root[data-theme="light"] {
@@ -37,11 +45,6 @@ Version: 2024
 	body {
 		@apply bg-primary p-8;
 	}
-
-	/* p {
-		@apply text-bodyLarge;
-		@apply mb-8;
-	} */
 }
 
 * {
@@ -55,4 +58,9 @@ body {
 	font-weight: 200;
 	-webkit-font-smoothing: antialiased;
 	transition: background-color 0.2s linear;
+}
+
+.is-style-juli a,
+.is-style-juli > * {
+	@apply uppercase bg-secondary text-primary font-primary rounded-none;
 }
