--- a/app/public/wp-content/plugins/manonemusic/style.css
+++ b/app/public/wp-content/plugins/manonemusic/style.css
@@ -43,7 +43,7 @@ Version: 2024
 	}
 
 	body {
-		@apply bg-primary p-8 text-secondary;
+		@apply bg-primary p-8 text-red;
 	}
 }
 
@@ -58,9 +58,4 @@ body {
 	font-weight: 200;
 	-webkit-font-smoothing: antialiased;
 	transition: background-color 0.2s linear;
-	color: rgba(var(--color-secondary-rgb), 1);
 }
-
-/* p {
-	color: rgba(var(--color-secondary-rgb));
-} */
