--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -43,7 +43,7 @@ Version: 2024
 	}
 
 	body {
-		@apply font-secondary bg-primary p-8 min-h-svh relative;
+		@apply font-secondary bg-primary p-8 min-h-svh relative overflow-x-scroll;
 	}
 
 	h1,
@@ -53,6 +53,10 @@ Version: 2024
 	h5,
 	h6 {
 		@apply text-secondary font-primary uppercase;
+	}
+
+	h1 {
+		@apply text-6xl;
 	}
 
 	cite {
@@ -78,10 +82,6 @@ body {
 }
 
 /* CUSTOM CORE BLOCK STYLES */
-.is-style-button-manonemusic a,
-.is-style-button-manonemusic > * {
-	@apply uppercase bg-secondary text-primary font-primary rounded-none;
-}
 
 /* // NavLinks // */
 #menu-header-menu a {
@@ -105,7 +105,7 @@ body {
 .container,
 .is-root-container,
 .generic-content {
-	@apply min-h-svh relative;
+	@apply min-h-svh max-w-wide m-auto relative;
 }
 
 /* // Columns // */
@@ -115,4 +115,13 @@ body {
 
 .wp-block-column {
 	@apply relative;
+}
+
+.is-style-group-section {
+	@apply min-w-screen;
+}
+
+.is-style-button-manonemusic a,
+.is-style-button-manonemusic > * {
+	@apply uppercase bg-secondary text-primary font-primary rounded-none;
 }
