--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -12,13 +12,6 @@ Version: 2024
 
 @import url("./assets/fonts.css");
 
-:root {
-	--color-primary: 30 30 30;
-	--color-secondary: 40 209 194;
-	--color-secondary-rgb: 182, 209, 194;
-	--color-focus: 154, 152, 152;
-}
-
 @layer base {
 	:root {
 		--font-primary: "PPSupplyMono", monospace;
@@ -28,6 +21,12 @@ Version: 2024
 		--color-secondary: 40 209 194;
 		--color-secondary-rgb: 40, 209, 194;
 		--color-focus: 154, 152, 152;
+		--margin-mobile: 1rem;
+		--margin-desktop: 2rem;
+		--padding-mobile: 1rem;
+		--padding-desktop: 2rem;
+		--container-width-mobile: calc(100vw - var(--padding-mobile) * 2);
+		--container-width-desktop: calc(100vw - var(--padding-desktop) * 2);
 	}
 	:root[data-theme="dark"] {
 		--color-primary: 30 30 30;
@@ -105,20 +104,20 @@ body {
 .container,
 .is-root-container,
 .generic-content {
-	@apply min-h-svh w-screen max-w-wide m-auto relative;
+	@apply min-h-svh w-[--container-width-desktop] max-w-wide m-auto relative;
 }
 
 .is-style-group-full {
-	@apply relative w-screen max-w-wide;
+	@apply relative w-[--container-width-desktop] max-w-wide;
 }
 
 .is-style-group-section {
-	@apply min-w-screen w-screen max-w-wide p-8;
+	@apply w-[--container-width-desktop] max-w-wide p-8;
 }
 
 /* class applied in the editor */
 .is-style-home-heading {
-	@apply absolute top-0 w-screen max-w-wide;
+	@apply absolute top-0 w-[--container-width-desktop] max-w-wide;
 }
 
 .is-style-logo-huge {
@@ -127,7 +126,7 @@ body {
 }
 
 .is-style-columns-full {
-	@apply relative min-h-svh w-screen max-w-wide flex;
+	@apply relative min-h-svh w-[--container-width-desktop] max-w-wide flex;
 }
 
 .is-style-columns-full p {
