theme-customisation: fix projects card render

--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -151,7 +151,7 @@ body {
 }
 
 .is-style-columns-full {
-	@apply min-h-[--container-height-desktop] w-full flex;
+	@apply min-h-[--container-height-desktop] w-full;
 }
 
 .is-style-columns-full p {
