theme-customisation: fix tailwind content + add styles to project card

--- a/app/public/wp-content/plugins/manonemusic/src/project-card/style.scss
+++ b/app/public/wp-content/plugins/manonemusic/src/project-card/style.scss
@@ -5,4 +5,11 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-@import url("./../../style.css");
+@import "./../../style.css";
+
+// .project-card {
+// 	display: block;
+// 	width: 16px;
+// 	height: 16px;
+// 	overflow: clip;
+// }
