--- a/app/public/wp-content/plugins/manonemusic/src/about-block/style.scss
+++ b/app/public/wp-content/plugins/manonemusic/src/about-block/style.scss
@@ -5,4 +5,4 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-@import url("./../../style.css");
+@import "./../../style.css";
