--- a/app/public/wp-content/plugins/manonemusic/src/customheading/editor.scss
+++ b/app/public/wp-content/plugins/manonemusic/src/customheading/editor.scss
@@ -4,4 +4,4 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-@import url("./../../style.css");
+@import "./../../style.css";
