--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -27,9 +27,7 @@
 	--container-height-mobile: calc(
 		100svh - var(--padding-mobile) - var(--header-height)
 	);
-	--container-height-desktop: calc(
-		100svh - var(--padding-desktop) - var(--header-height)
-	);
+	--container-height-desktop: calc(100vh - var(--padding-desktop));
 }
 
 @layer base {
@@ -47,15 +45,11 @@
 	}
 
 	body {
-		@apply font-secondary bg-primary min-h-svh w-screen relative overflow-x-scroll;
+		@apply font-secondary bg-primary overflow-x-scroll;
 	}
 
 	header {
-		@apply fixed px-8 flex justify-between h-16 min-w-full max-w-wide;
-	}
-
-	main {
-		@apply relative min-h-svh w-full max-w-wide ml-0 mr-auto;
+		@apply fixed px-8 flex justify-between items-center h-16 min-w-full max-w-wide;
 	}
 
 	h1,
@@ -128,21 +122,22 @@ body {
 .container,
 .is-root-container,
 .generic-content {
-	@apply min-h-svh h-svh w-full max-w-wide;
+	@apply min-h-[--container-height-desktop] w-full max-w-wide;
 }
 
+/* HORIZONTAL PANEL */
 .is-style-group-full {
-	@apply min-h-svh h-svh ml-0;
+	@apply h-[--container-height-desktop] ml-0;
 }
 
 /* TODO: check why max-w is not being applied */
 .is-style-group-section {
-	@apply relative h-full min-w-[--container-width-desktop] w-[--container-width-desktop] max-w-wide p-8;
+	@apply relative h-[--container-height-desktop] min-w-[--container-width-desktop] w-[--container-width-desktop] max-w-wide px-8;
 }
 
 /* class applied in the editor */
 .is-style-home-heading {
-	@apply absolute top-0 w-full;
+	@apply absolute top-16 w-full;
 }
 
 .is-style-logo-huge {
@@ -150,8 +145,9 @@ body {
 	font-size: clamp(2rem, 12vw, 15.3rem);
 }
 
+/* COLUMNS */
 .is-style-columns-full {
-	@apply min-h-[--container-height-desktop] w-full;
+	@apply h-full w-full;
 }
 
 .is-style-columns-full p {
@@ -159,10 +155,21 @@ body {
 }
 
 .is-style-column-full {
-	@apply min-h-full flex-1 relative flex flex-col justify-between bg-faded-5;
+	@apply h-full flex-1 relative flex flex-col justify-between bg-faded-5;
 }
 
+/* STACK */
+.is-style-stack-scroll {
+	@apply h-full overflow-y-scroll pt-8 space-y-8;
+}
+
+/* BUTTON */
 .is-style-button-manonemusic a,
 .is-style-button-manonemusic > * {
 	@apply uppercase bg-secondary text-primary font-primary rounded-none;
+}
+
+/* IMAGE */
+.is-style-image-square {
+	@apply w-full aspect-square object-cover;
 }
