--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -23,10 +23,11 @@
 	--padding-mobile: 1rem;
 	--padding-desktop: 2rem;
 	--container-width-mobile: calc(100vw - var(--padding-mobile) * 2);
-	--container-width-desktop: calc(100vw - var(--padding-desktop) * 2);
+	--container-width-desktop: 100vw;
 	--container-height-mobile: calc(
 		100svh - var(--padding-mobile) - var(--header-height)
 	);
+	--panels-container-width-desktop: calc(100vw * 5);
 	--container-height-desktop: calc(100vh);
 }
 
@@ -126,9 +127,9 @@ body {
 /* @import "./styles/custom-core-blocks.css"; */
 
 /* HORIZONTAL SCROLL (outer panel) */
-/* .is-style-horizontal-scroll {
-	@apply h-[--container-height-desktop];
-} */
+.is-style-horizontal-scroll {
+	@apply h-screen w-screen overflow-clip;
+}
 
 /* HORIZONTAL PANEL (inner panel) */
 .is-style-group-full {
@@ -137,16 +138,16 @@ body {
 
 /* TODO: check why max-w is not being applied */
 .is-style-group-section {
-	@apply relative h-[--container-height-desktop] min-w-[--container-width-desktop] px-8;
+	@apply relative h-[--container-height-desktop] min-w-screen px-8;
 }
 
 /* class applied in the editor */
 .is-style-home-heading {
-	@apply absolute top-16 w-full;
+	@apply absolute top-16 w-screen px-8;
 }
 
 .is-style-logo-huge {
-	@apply block w-full text-center;
+	@apply block w-screen px-8 text-center;
 	font-size: clamp(2rem, 12vw, 15.3rem);
 }
 
