design-base: fix group stack admin + remove project label from card

--- a/app/public/wp-content/themes/manonemusic/src/assets/fonts/fonts.scss
+++ b/app/public/wp-content/themes/manonemusic/src/assets/fonts/fonts.scss
@@ -1,6 +1,13 @@
 @font-face {
 	font-family: "PPSupplyMono";
 	src: url("PPSupplyMono-Regular.otf") format("opentype");
-	font-weight: normal;
+	font-weight: medium;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "PPSupplyMono";
+	src: url("PPSupplyMono-Ultralight.otf") format("opentype");
+	font-weight: extralight;
 	font-style: normal;
 }
