--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -165,7 +165,7 @@
 }
 
 .is-style-group-section {
-	@apply relative h-[--container-height-desktop] min-w-screen;
+	@apply relative h-[--container-height-desktop] min-w-screen overflow-clip;
 }
 
 /* class applied in the editor */
@@ -214,7 +214,7 @@
 
 /* HEADING */
 .is-style-heading-section {
-	@apply block mt-32 pl-32 opacity-0;
+	@apply block mt-32 pl-32;
 }
 
 /* PARAGRAPH */
