--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -1,3 +1,16 @@
+/*
+Theme Name: ManoneMusic
+Theme URI: https://manomusic.com
+Author: Juli Scapucin
+Author URI: https://juliscapucin.com
+Description: A custom theme for ManoneMusic.
+Requires at least: 6.4
+Tested up to: 6.5
+Requires PHP: 8.0
+Version: 1.0
+Text Domain: manonemusic
+*/
+
 @import url("https://use.typekit.net/cbg5juo.css");
 
 @tailwind base;
