--- a/app/public/wp-content/themes/manonemusic/templates/single-release.html
+++ b/app/public/wp-content/themes/manonemusic/templates/single-release.html
@@ -1,47 +1,3 @@
-<!-- wp:group {"layout":{"type":"constrained"}} -->
-<div class="wp-block-group"><!-- wp:heading -->
-   <h2 class="wp-block-heading">Kanzeon</h2>
-   <!-- /wp:heading -->
-   
-   <!-- wp:columns -->
-   <div class="wp-block-columns"><!-- wp:column -->
-   <div class="wp-block-column"><!-- wp:paragraph -->
-   <p>Far from Tokyo, a rarely seen view of Japanese culture is revealed through ancient rituals and extraordinary musical spectacle. The film invites the audience to immerse into this unconventional and trans-formative world.</p>
-   <!-- /wp:paragraph --></div>
-   <!-- /wp:column -->
-   
-   <!-- wp:column -->
-   <div class="wp-block-column"><!-- wp:image {"id":220,"sizeSlug":"full","linkDestination":"none"} -->
-   <figure class="wp-block-image size-full"><img src="http://manone-music.local/wp-content/uploads/2024/05/film-kanzeon.jpeg" alt="" class="wp-image-220"/></figure>
-   <!-- /wp:image --></div>
-   <!-- /wp:column -->
-   
-   <!-- wp:column -->
-   <div class="wp-block-column"><!-- wp:heading -->
-   <h2 class="wp-block-heading">details</h2>
-   <!-- /wp:heading -->
-   
-   <!-- wp:list -->
-   <ul><!-- wp:list-item -->
-   <li>Director:</li>
-   <!-- /wp:list-item -->
-   
-   <!-- wp:list-item -->
-   <li>Release Date:</li>
-   <!-- /wp:list-item -->
-   
-   <!-- wp:list-item -->
-   <li>Duration:</li>
-   <!-- /wp:list-item -->
-   
-   <!-- wp:list-item -->
-   <li>Official Site:</li>
-   <!-- /wp:list-item -->
-   
-   <!-- wp:list-item -->
-   <li>Production Company:</li>
-   <!-- /wp:list-item --></ul>
-   <!-- /wp:list --></div>
-   <!-- /wp:column --></div>
-   <!-- /wp:columns --></div>
-   <!-- /wp:group -->
+<!-- wp:template-part {"slug":"header","theme":"manonemusic"} /-->
+
+<!-- wp:template-part {"slug":"release","theme":"manonemusic","area":"uncategorized"} /-->
