--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -1,4 +1,4 @@
-<!-- wp:template-part {"slug":"header","theme":"manonemusic"} /-->
+<!-- wp:pattern {"slug":"manonemusic/header"} /-->
 
 <!-- wp:group {"tagName":"main","metadata":{"name":"Outer Container"},"className":"is-style-horizontal-scroll","layout":{"type":"constrained"}} -->
 <main id="panels-outer-container" class="wp-block-group is-style-horizontal-scroll"><!-- wp:group {"metadata":{"name":"Inner Container"},"className":"is-style-group-full","layout":{"type":"flex","flexWrap":"nowrap"}} -->
