--- a/app/public/wp-content/themes/manonemusic/templates/single-project.html
+++ b/app/public/wp-content/themes/manonemusic/templates/single-project.html
@@ -1,3 +1,3 @@
-<!-- wp:template-part {"slug":"header","theme":"manonemusic"} /-->
+<!-- wp:pattern {"slug":"manonemusic/header"} /-->
 
 <!-- wp:template-part {"slug":"project","theme":"manonemusic","area":"uncategorized"} /-->
