--- a/app/public/wp-content/themes/manonemusic/templates/single-release.html
+++ b/app/public/wp-content/themes/manonemusic/templates/single-release.html
@@ -1,3 +1,4 @@
-<!-- wp:template-part {"slug":"header","theme":"manonemusic"} /-->
+<!-- wp:pattern {"slug":"manonemusic/header"} /-->
 
-<!-- wp:template-part {"slug":"release","theme":"manonemusic","area":"uncategorized"} /-->
+<!-- wp:post-content /-->
+   
