--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -1,5 +1,3 @@
-<!-- wp:pattern {"slug":"manonemusic/header"} /-->
-
 <!-- wp:group {"tagName":"main","metadata":{"name":"Outer Container"},"className":"is-style-horizontal-scroll","layout":{"type":"constrained"}} -->
 <main id="panels-outer-container" class="wp-block-group is-style-horizontal-scroll"><!-- wp:group {"metadata":{"name":"Inner Container"},"className":"is-style-group-full","layout":{"type":"flex","flexWrap":"nowrap"}} -->
    <div id="panels-inner-container" class="wp-block-group is-style-group-full"><!-- wp:group {"tagName":"section","metadata":{"name":"Home"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
@@ -63,14 +61,14 @@
    <h1 class="wp-block-heading is-style-heading-section">projects</h1>
    <!-- /wp:heading -->
    
-   <!-- wp:manonemusic/cards-stack {"section":"project"} -->
+   <!-- wp:manonemusic/cards-stack {"section":"project","classes":"absolute top-0 right-32 w-96 h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-8 z-40"} -->
    <div class="wp-block-manonemusic-cards-stack"></div>
    <!-- /wp:manonemusic/cards-stack -->
    
    <!-- wp:columns {"className":"is-style-columns-full-bottom"} -->
    <div class="wp-block-columns is-style-columns-full-bottom"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding"} -->
    <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding"><!-- wp:paragraph {"className":"is-style-indent-left"} -->
-   <p class="is-style-indent-left">IXA is Matt’s latest electronic music production project, pushing his unique electronic music around the world. His sound delves deep into a musical past rich in soulful, electronic influences with haunting vocal samples, deep, emotional synths and unrelenting beats featuring heavily in both IXA productions and DJ sets.</p>
+   <p class="is-style-indent-left">IXA is Matt’s latest electronic music production project, pushing his unique electronic music around the world. His sound delves deep into a musical past rich in soulful, electronic influences with haunting vocal samples, deep, emotional synths and unrelenting beats featuring heavily in both IXA productions and DJ sets. YAY</p>
    <!-- /wp:paragraph -->
    
    <!-- wp:categories /--></div>
@@ -91,7 +89,7 @@
    <h1 class="wp-block-heading is-style-heading-section">releases</h1>
    <!-- /wp:heading -->
    
-   <!-- wp:manonemusic/cards-stack {"section":"release"} -->
+   <!-- wp:manonemusic/cards-stack {"section":"release","classes":"absolute top-0 right-32 w-96 h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-8 z-40"} -->
    <div class="wp-block-manonemusic-cards-stack"></div>
    <!-- /wp:manonemusic/cards-stack -->
    
