--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -1,3 +1,5 @@
+<!-- wp:template-part {"slug":"header","theme":"manonemusic","area":"header"} /-->
+
 <!-- wp:group {"tagName":"main","metadata":{"name":"Outer Container"},"className":"is-style-horizontal-scroll","layout":{"type":"constrained"}} -->
 <main id="panels-outer-container" class="wp-block-group is-style-horizontal-scroll"><!-- wp:group {"metadata":{"name":"Inner Container"},"className":"is-style-group-full","layout":{"type":"flex","flexWrap":"nowrap"}} -->
    <div id="panels-inner-container" class="wp-block-group is-style-group-full"><!-- wp:group {"tagName":"section","metadata":{"name":"Home"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
@@ -61,7 +63,7 @@
    <h1 class="wp-block-heading is-style-heading-section">projects</h1>
    <!-- /wp:heading -->
    
-   <!-- wp:manonemusic/cards-stack {"section":"project","classes":"absolute top-0 right-32 w-96 h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-8 z-40"} -->
+   <!-- wp:manonemusic/cards-stack {"section":"project","classes":"absolute top-0 right-32 w-96 h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-8 z-40 bg-primary"} -->
    <div class="wp-block-manonemusic-cards-stack"></div>
    <!-- /wp:manonemusic/cards-stack -->
    
@@ -89,7 +91,7 @@
    <h1 class="wp-block-heading is-style-heading-section">releases</h1>
    <!-- /wp:heading -->
    
-   <!-- wp:manonemusic/cards-stack {"section":"release","classes":"absolute top-0 right-32 w-96 h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-8 z-40"} -->
+   <!-- wp:manonemusic/cards-stack {"section":"release","classes":"absolute top-0 right-32 w-96 h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-8 z-40 bg-primary"} -->
    <div class="wp-block-manonemusic-cards-stack"></div>
    <!-- /wp:manonemusic/cards-stack -->
    
@@ -100,7 +102,7 @@
    <!-- /wp:paragraph -->
    
    <!-- wp:paragraph {"className":"is-style-indent-right"} -->
-   <p class="is-style-indent-right">With performances alongside luminaries such as Pete Tong, Skream, Booka Shade, Sasha and festival appearances at ULTRA, Sonar, ALTN8 and Clockenflap the IXA musical adventure continues. New music out now on Purple Sun Records check out IXA music on Beatport and streaming everywhere.</p>
+   <p class="is-style-indent-right">New music out now on Purple Sun Records check out IXA music on Beatport and streaming everywhere.</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column -->
    
