--- a/app/public/wp-content/themes/manonemusic/templates/single-release.html
+++ b/app/public/wp-content/themes/manonemusic/templates/single-release.html
@@ -1,4 +1,4 @@
-<!-- wp:pattern {"slug":"manonemusic/header"} /-->
+<!-- wp:template-part {"slug":"header","theme":"manonemusic","area":"header"} /-->
 
 <!-- wp:post-content /-->
    
